WIP Disable navbar on mobile and TEMP FIX height. TODO Research and fix via CSS.

--- a/include/css/base.css
+++ b/include/css/base.css
@@ -1,7 +1,5 @@
-html, body{
-	height: 100%;
-	max-height: 100%;
-}
+html{ height: 100%; }
+body{ min-height: 100%; }
 
 .container-fluid{
 	padding: 0;
